group 'io.spring.experimental'
version '1.0-SNAPSHOT'

apply plugin: 'java'

sourceCompatibility = 11
targetCompatibility = 11

repositories {
    mavenCentral()
}

dependencies {
    compile("org.springframework:spring-webflux:5.1.4.RELEASE")
    compile("org.springframework:spring-context:5.1.4.RELEASE")
    compile("org.springframework:spring-test:5.1.4.RELEASE")
    compile("io.projectreactor:reactor-core:3.2.5.RELEASE")
    testCompile("io.projectreactor:reactor-test:3.2.5.RELEASE")
    testCompile("io.projectreactor.netty:reactor-netty:0.8.4.RELEASE")
    testCompile("com.squareup.okhttp3:mockwebserver:3.12.1")
    testCompile("com.squareup.okhttp3:okhttp-tls:3.12.1")
    testCompile("junit:junit:4.12")
    testCompile("com.fasterxml.jackson.core:jackson-databind:2.9.4")
    testCompile("org.hamcrest:hamcrest-all:1.3")
}
